# dcm2mids

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
docs/: conf.py  index.rst
src/dcm2mids/: __main__.py  create_mids_directory.py  generate_tsvs.py  get_dicomdir.py  tagger.py
src/dcm2mids/logger/: logger.py
src/dcm2mids/procedures/: __init__.py  dicom2nifti.py  dictify.py  procedures.py
src/dcm2mids/procedures/general_radiology/: __init__.py  conventional_radiology_procedure.py  general_radiology_procedure.py  tomography_procedure.py
src/dcm2mids/procedures/magnetic_resonance/: __init__.py  magnetic_resonance_procedure.py
src/dcm2mids/procedures/utils/: utils.py
src/dcm2mids/procedures/visible_light/: __init__.py  microscopy_procedure.py  ophthalmography_procedure.py  visible_light_procedure.py
tests/: conftest.py  test_get_dicomdir.py
