[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
# dynamic = ["version"]
name = "dcm2mids"
version = "v0.1.03072024"
authors = [
  { name="Jose Manuel Saborit Torres", email="josemanuel.saborit@fisabio.es" },
  { name="Alejandro Mora Rubio", email="alejandro.mora@fisabio.es" },
]
description = "Tool for converting DICOM images to the BIDS/MIDS structure"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "importlib-metadata; python_version<'3.8'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
 
testing = ["pytest", "pytest-cov"]


[project.urls]
Homepage = "https://github.com/BIMCV-CSUSP/dcm2mids"
Issues = "https://github.com/BIMCV-CSUSP/dcm2mids/issues"